# Gentooui

./: LICENSE  README.md  STRUCTURE.md  pyproject.toml  requirements.txt  setup.py
configs/examples/: desktop.yaml  server.yaml
docs/: index.md
scripts/: install-dev.sh
src/gentooui/: __init__.py  main.py
src/gentooui/core/: __init__.py  app.py  config.py  installer.py  logger.py
src/gentooui/installers/: __init__.py
src/gentooui/screens/: __init__.py
src/gentooui/utils/: __init__.py  system.py
tests/: conftest.py  test_config.py  test_system.py
